# clash-spartan6-template

./: README.md  flake.nix
template/: .gitignore  LICENSE  design.cabal  flake.nix  makefile  mimasv2.ucf  result
template/src/: TopLevel.hs
